--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.6",
+    "@mui/x-date-pickers": "^7.27.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,11 +16,14 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.13",
+    "flatpickr": "^4.6.13",
     "gh-pages": "^6.1.1",
     "openai": "^4.26.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -49,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-flatpickr": "^3.8.11",
     "prettier": "3.5.2"
   }
 }
