--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@types/react-flatpickr": "^3.8.11",
+    "eslint-config-prettier": "^10.0.2",
     "prettier": "3.5.2"
   }
 }
