--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.13",
+    "firebase": "^11.4.0",
     "flatpickr": "^4.6.13",
     "gh-pages": "^6.1.1",
     "openai": "^4.26.0",
