--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@types/react-flatpickr": "^3.8.11",
     "eslint-config-prettier": "^10.0.2",
-    "prettier": "3.5.2"
+    "prettier": "3.5.2",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
