--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "starter_helpi",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kush-patel1.github.io/LiveCue",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
