--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^11.4.0",
     "flatpickr": "^4.6.13",
     "gh-pages": "^6.1.1",
+    "lodash": "^4.17.21",
     "openai": "^4.26.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -58,9 +59,10 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.16",
     "@types/react-flatpickr": "^3.8.11",
+    "@types/react-router-dom": "^5.3.3",
     "eslint-config-prettier": "^10.0.2",
-    "prettier": "3.5.2",
-    "@types/react-router-dom": "^5.3.3"
+    "prettier": "3.5.2"
   }
 }
